--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ HTML elements
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background: radial-gradient(
     134.34% 134.34% at 50% 0%,
     #0496a0 0%,
